# openmole-market

./: .gitattributes  .gitignore  .gitmodules  .lfsconfig  README.md  index.yml
Ackley/: readme.md
R/: R.oms  package.sh
R-hello/: R.oms  README.md  RFiles.oms  data.csv  test.R
R-logisticregression/: LogisticRegression.oms  RunModel.oms  fire.R  logisticRegression.R
abc/: README.md  abc.oms
ackley/: Ackley_visualization.py  readme.md
advanced/: LICENSE.md  Model.oms  README-en.md  ants.nlogo
ants/: Calibrate.oms  ExploreDistribution.oms  Island.oms  README.md  calibrate.oms  fitdistr.R  island.oms
ants-extended/: Calibrate.oms  Exploration.oms  ExploreDistribution.oms  Island.oms  README.md  analysis.R  fitdistr.R
fire/: Explore.oms  Fire.nlogo  README.md  explore.oms
fsl-fast/: FSL.oms  README.md  package.sh
gama/: PredatorPrey.oms  PredatorPrey192.oms  PredatorPrey2025.oms  README.md  predatorPrey.gaml
genetic-algos-visu/: README.md  example_of_optimization.oms  plot_iterations_as_mp4video.oms  plot_iterations_as_plotly.oms  plot_iterations_as_png.oms  plot_last_iteration.oms  plot_pairs.oms
hello-container/: Container.oms
hello-jvm/: Hello.oms  package.sh
hello-plugin/: ExploreHelloCode.oms  ExploreHelloTask.oms  README.md  hellocode.oms  hellotask.oms  package.sh
java-hello/: README.md  explore.oms  package.sh
julia-hello/: hello.jl  julia.oms
metamimetic-networks/: Explore.oms  OM_Metamimetic_Networks_GIT.nlogo  README.md  README.txt  emailFinal.graphml  (+4 more)
tutorials/method/analyses/: EAForModelling.cabal  analyses.hs  stack.yaml
(+164 files in other folders)
