name:                EAForModelling
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/guillaumecherel/EAForModelling
license:             OtherLicense
license-file:        ../LICENSE.md
author:              Guillaume Chérel
maintainer:          guillaume.cherel@iscpif.fr
copyright:           2015 Guillaume Chérel
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable EAForModelling
  hs-source-dirs:      .
  main-is:             analyses.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       text >= 1.2.1.3,
                       Chart >= 1.5.3,
                       Chart-cairo >= 1.5.1,
                       Chart-diagrams >= 1.5.1,
                       csv-conduit >= 0.6.6,
                       directory >= 1.2.2.0,
                       containers >= 0.5.6.2,
                       vector >= 0.10.12.3,
                       colour >= 2.3.3,
                       colour >= 2.3.3,
                       lens >= 4.12.3,
                       data-default-class >= 0.0.1
